ws-datetime-kustomize/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /ws_datetime
  name: ws-datetime
  namespace: local
  labels:
    app: ws-datetime
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /ws_datetime
            pathType: Prefix
            backend:
              service:
                name: ws-datetime
                port:
                  number: 8080
